--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<style>
+  body {
+    background: linear-gradient(45deg, #e6e6e6, #1e3c8d);
+    min-height: 100vh;
+    margin: 0;
+  }
+</style>
 
 <body>
-  <app-root></app-root>
+  <!-- <app-root></app-root> -->
+  <app-order></app-order>
 
+
+
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
