--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,16 @@
 </head>
 <style>
   body {
-    background: linear-gradient(45deg, #e6e6e6, #1e3c8d);
-    min-height: 100vh;
-    margin: 0;
+    background: linear-gradient(45deg, #e6e6e6, #1e3c8d, #e6e6e6, #1e3c8d);
+    width: 100%;
   }
 </style>
 
 <body>
   <!-- <app-root></app-root> -->
-  <app-order></app-order>
-
-
+  <!-- <app-order></app-order> -->
+  <!-- <app-order-comfirm></app-order-comfirm> -->
+  <app-login></app-login>
 
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
