Your commit message

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <style>
   body {
-    background: linear-gradient(45deg, #e6e6e6, #1e3c8d, #e6e6e6, #1e3c8d);
+    background: linear-gradient(45deg, #371b38, #1e3c8d, #2d0d0d, #1e3c8d);
     width: 100%;
   }
 </style>
@@ -19,8 +19,9 @@
   <!-- <app-root></app-root> -->
   <!-- <app-order></app-order> -->
   <!-- <app-order-comfirm></app-order-comfirm> -->
-  <app-login></app-login>
-
+  <!-- <app-login></app-login> -->
+  <!-- <app-register></app-register> -->
+  <app-detail-product></app-detail-product>
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
