--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
 </style>
 
 <body>
-  <app-root></app-root>
+  <!-- <app-root></app-root> -->
   <!-- <app-order></app-order> -->
   <!-- <app-order-comfirm></app-order-comfirm> -->
   <!-- <app-login></app-login> -->
-  <!-- <app-register></app-register> -->
+  <app-register></app-register>
   <!-- <app-detail-product></app-detail-product> -->
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
